namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workloads
  labels:
    apps.tanzu.vmware.com/tap-ns: ""
