ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: acme-fitness-ingress
  namespace: workloads
spec:
  virtualhost:
    fqdn: acme-fitness.tap-lab.terasky.demo
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: acme-fitness-gateway
      port: 443
